<resources>
    <string name="app_name">Weather Report</string>

    <!--Errors-->
    <string name="something_went_wrong">Something went wrong</string>
    <string name="no_internet">No Internet</string>
    <string name="server_timeout">Server Timeout</string>
    <string name="oops_no_internet_connectivity">Oops! No internet connectivity</string>
    <string name="no_internet_message">Make sure you are connected to the internet to proceed further</string>
    <string name="invalid_name">Please enter a valid name</string>
    <string name="location_required">Please grant location permission from settings and try again.</string>

    <string name="go_back">Go Back</string>
    <string name="retry">Retry</string>
    <string name="please_try_again_later">Please try again later</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_date">Date</string>
    <string name="title_days">Days</string>
    <string name="title_settings">Settings</string>
    <string name="login_message">Login with your name to check weather</string>
    <string name="start">*</string>
    <string name="name">Name</string>
    <string name="log_in">Log In</string>
    <string name="greet_user">Hi, %s</string>
    <string name="min_max_temp">Day %1$s° · Night %2$s°</string>
    <string name="temp_type">°%s</string>
    <string name="feels_like">Feels like %s°</string>
    <string name="wind_speed">%s mph</string>
    <string name="pressure_humidity">Pressure %1$s hPa · Humidity %2$s%%</string>
    <string name="sunrise_sunset">Sunrise %1$s · Sunset %2$s</string>
    <string name="loading_please_wait">Loading, please wait…</string>
    <string name="date_format">%1$d/%2$d/%3$d</string>
    <string name="temp">%s°</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string-array name="cities">
        <item>Delhi</item>
        <item>Mumbai</item>
        <item>Noida</item>
    </string-array>
</resources>