<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="8dp"
    android:paddingEnd="16dp"
    android:paddingBottom="24dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_dash" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/errorImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:srcCompat="@drawable/ic_error" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/errorTitleTextView"
        style="@style/PrimaryText.SemiBold.24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:letterSpacing="0"
        android:text="@string/oops_no_internet_connectivity" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/errorSubtitleTextView"
        style="@style/TertiaryText.Medium.16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:letterSpacing="0"
        android:text="@string/no_internet_message" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/retryButton"
        style="@style/FilledButton.Accent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/font_gilroy_bold"
        android:letterSpacing="0"
        android:text="@string/retry"
        android:textSize="20sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/goBackButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/font_gilroy_bold"
        android:text="@string/go_back"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:visibility="gone"
        tools:visibility="visible" />
</LinearLayout>