<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.login.LoginActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/loginCardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="44dp"
        app:cardCornerRadius="8dp"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/loginScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@drawable/bg_login"
                    android:scaleType="centerCrop"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/loginImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/img_login" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/loginTittleTextView"
                    style="@style/PrimaryText.SemiBold.16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/login_message"
                    app:layout_constraintTop_toBottomOf="@id/loginImageView" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/nameErrorStarTextView"
                    style="@style/Red.Regular.12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/start"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/loginTittleTextView" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/nameErrorMessageTextView"
                    style="@style/TertiaryText.Regular.12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="20dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/nameErrorStarTextView"
                    app:layout_constraintTop_toTopOf="@id/nameErrorStarTextView" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameInputLayout"
                    style="@style/TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintTop_toBottomOf="@id/nameErrorMessageTextView">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameEditText"
                        style="@style/PrimaryDark.Regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName">

                        <requestFocus />
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginButton"
                    style="@style/FilledButton.Accent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="26dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/log_in"
                    app:layout_constraintTop_toBottomOf="@id/nameInputLayout" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>